Add basic valintaryhma mocha test

--- a/src/test/webapp/test/runner.html
+++ b/src/test/webapp/test/runner.html
@@ -22,7 +22,9 @@
 <script src="util/testHelpers.js"></script>
 <script src="util/test-dsl.js"></script>
 <script src="page/valintakokeen_muokkaus.js"></script>
+<script src="page/valintaryhmaPage.js"></script>
 <script src="spec/valintakokeenMuokkausSpec.js"></script>
+<script src="spec/valintaryhmaSpec.js"></script>
 <script>
     $(document).ready(function() {
         if (window.mochaPhantomJS) {
