BUG-1321: Käsitellään-merkki jää uusien raamien alle

--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -120,13 +120,12 @@
 
 </head>
 <body data-ng-controller="RootCtrl">
-
+    <div ng-controller="LoadingCtrl">
+        <div ng-show="loading" style="z-index: 200; top: 0px; width: 100%; text-align: center; background: #FFF7BC none repeat scroll 0% 0%; padding: 0.3em; font-weight: bold; font-style: italic;">Käsitellään...</div>
+    </div>
     <div id="application-wrapper">
         <div id="angularbox" ng-view="" ng-controller="mainCtrl"></div>
     </div>
-
-
-    <div ng-controller="LoadingCtrl"><div ng-show="loading" style="position: fixed; left: 0px; top: 0px; background: gold; padding: 0.3em; font-weight: bold;">käsitellään...</div></div>
 </body>
 
 </html>
