--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/puu/errors.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/puu/errors.html
@@ -5,6 +5,7 @@
     <span add-class-on-mouseover="bold" ng-switch-when="PUUTTUVAPAKOLLINENFUNKTIOARGUMENTTI" ng-click="setFunktioSelection(error.funktiokutsu, error.isFunktiokutsu, error.parent, error.index)">Virhe funktiokutsussa: <b>{{error.nimi}}</b>. Funktiokutsulle ei ole määritelty yhtään funktioargumenttia. Tälle funktiokutsulle on määriteltävä vähintään yksi funktioargumentti</span>
     <span add-class-on-mouseover="bold" ng-switch-when="SYOTEPARAMETRIVIRHE" ng-click="setFunktioSelection(error.funktiokutsu, error.isFunktiokutsu, error.parent, error.index)">Virhe funktiokutsussa: <b>{{error.nimi}}</b>. </span>
     <span add-class-on-mouseover="bold" ng-switch-when="PUUTTUVATALLENNATULOS" ng-click="setFunktioSelection(error.funktiokutsu, error.isFunktiokutsu, error.parent, error.index)">Virhe funktiokutsussa: <b>{{error.nimi}}</b>. Tulostunniste täytyy määritellä, jos Tallenna tulos -kenttä on valittu</span>
+    <span add-class-on-mouseover="bold" ng-switch-when="PUUTTUVATULOSTEKSTI" ng-click="setFunktioSelection(error.funktiokutsu, error.isFunktiokutsu, error.parent, error.index)">Virhe funktiokutsussa: <b>{{error.nimi}}</b>. Tulostekstit täytyy määritellä, jos Tallenna tulos -kenttä on valittu</span>
     <span add-class-on-mouseover="bold" ng-switch-when="PUUTTUVAARVOKONVERTTERI" ng-click="setFunktioSelection(error.funktiokutsu, error.isFunktiokutsu, error.parent, error.index)">Virhe funktiokutsussa: <b>{{error.nimi}}</b>. Funktiokutsulta puuttuu pakollinen arvokonvertteri</span>
     <span add-class-on-mouseover="bold" ng-switch-when="PKPARITONMAARAFUNKIOARGUMENTTEJA" ng-click="setFunktioSelection(error.funktiokutsu, error.isFunktiokutsu, error.parent, error.index)">Virhe funktiokutsussa: <b>{{error.nimi}}</b>. Painotetulla keskiarvolla on oltava parillinen määrä funktioargumentteja</span>
     <span add-class-on-mouseover="bold" ng-switch-when="PKLIIANVAHANFUNKTIOARGUMENTTEJA" ng-click="setFunktioSelection(error.funktiokutsu, error.isFunktiokutsu, error.parent, error.index)">Virhe funktiokutsussa: <b>{{error.nimi}}</b>. Painotetulla keskiarvolla on oltava vähintään kaksi määriteltyä funktioargumenttia</span>
@@ -12,5 +13,4 @@
     <span add-class-on-mouseover="bold" ng-switch-when="HAETOTUUSARVOJAKONVERTOILUKUARVOKSIPUUTTUVAARVOKONVERTTERI" ng-click="setFunktioSelection(error.funktiokutsu, error.isFunktiokutsu, error.parent, error.index)">Virhe funktiokutsussa: <b>{{error.nimi}}</b>. Tälle funktiokutsulle täytyy määritellä vähintään yksi arvovälikonvertteri.</span>
     <span ng-switch-when="TAUSTAPALVELU">Kaavaa tallennettaessa taustapalvelussa tapahtui virhe</span>
     <span ng-switch-when="UNKNOWN">Tuntematon virhe</span>
-
 </span>
