--- a/src/test/webapp/test/runner.html
+++ b/src/test/webapp/test/runner.html
@@ -19,6 +19,7 @@
 </script>
 <script src="fixtures/valintaperusteet.js"></script>
 <script src="fixtures/hakuApp.js"></script>
+<script src="fixtures/oppijanumeroRekisteri.js"></script>
 <script src="util/testHelpers.js"></script>
 <script src="util/test-dsl.js"></script>
 <script src="page/valintakokeen_muokkaus.js"></script>
