--- a/src/main/resources/webapp/app/laskentakaavat/laskentakaavaeditori/puu/laskentakaavapuu.html
+++ b/src/main/resources/webapp/app/laskentakaavat/laskentakaavaeditori/puu/laskentakaavapuu.html
@@ -119,6 +119,7 @@
 
 
 <!--
+    AMMATILLINENARVOSANA
     HAETOTUUSARVO
     HAELUKUARVO
     HAELUKUARVOEHDOLLA
@@ -544,6 +545,10 @@ YHTASUURI
                 <span>{{ t('laskentakaavapuu.haelukuarvoehdolla') || 'Hae lukuarvo ehdolla' }}</span></td>
             <td ng-click="addFunktio(parent, 'HAEYOARVOSANA', funktioSlotIndex); showNewFunktioList.visible = false">
                 <span>{{ t('laskentakaavapuu.yoarvosana') || 'YO-arvosana' }}</span></td>
+        </tr>
+        <tr>
+            <td ng-click="addFunktio(parent, 'HAEAMMATILLINENARVOSANA', funktioSlotIndex); showNewFunktioList.visible = false">
+                <span>{{ t('laskentakaavapuu.ammatillinenarvosana') || 'Ammatillinen arvosana' }}</span></td>
         </tr>
         <tr ng-if="parent.lapsi">
             <td ng-click="addLaskentakaavaviite(parent, funktioSlotIndex); showNewFunktioList.visible = false"><span>{{ t('laskentakaavapuu.viittaus') || 'Viittaus toiseen kaavaan' }}</span>
