VTKU-98 : Korjaa funktion nimi

--- a/src/main/resources/webapp/app/laskentakaavat/laskentakaavaeditori/puu/laskentakaavapuu.html
+++ b/src/main/resources/webapp/app/laskentakaavat/laskentakaavaeditori/puu/laskentakaavapuu.html
@@ -547,7 +547,7 @@ YHTASUURI
                 <span>{{ t('laskentakaavapuu.yoarvosana') || 'YO-arvosana' }}</span></td>
         </tr>
         <tr>
-            <td ng-click="addFunktio(parent, 'HAEAMMATILLINENARVOSANA', funktioSlotIndex); showNewFunktioList.visible = false">
+            <td ng-click="addFunktio(parent, 'HAEAMMATILLINENYTOARVOSANA', funktioSlotIndex); showNewFunktioList.visible = false">
                 <span>{{ t('laskentakaavapuu.ammatillinenarvosana') || 'Ammatillinen arvosana' }}</span></td>
         </tr>
         <tr ng-if="parent.lapsi">
