VTKU-98 : Lisää uusi yto:n asteikon haku

--- a/src/main/resources/webapp/app/laskentakaavat/laskentakaavaeditori/puu/laskentakaavapuu.html
+++ b/src/main/resources/webapp/app/laskentakaavat/laskentakaavaeditori/puu/laskentakaavapuu.html
@@ -550,6 +550,10 @@ YHTASUURI
             <td ng-click="addFunktio(parent, 'HAEAMMATILLINENYTOARVOSANA', funktioSlotIndex); showNewFunktioList.visible = false">
                 <span>{{ t('laskentakaavapuu.ammatillinenytoarvosana') || 'Ammatillinen yto-arvosana' }}</span></td>
         </tr>
+        <tr>
+            <td ng-click="addFunktio(parent, 'HAEAMMATILLINENYTOARVIOINTIASTEIKKO', funktioSlotIndex); showNewFunktioList.visible = false">
+                <span>{{ t('laskentakaavapuu.ammatillinenytoarviointiasteikko') || 'Hae ammatillinen yto-arviointiasteikko ja konvertoi lukuarvoksi' }}</span></td>
+        </tr>
         <tr ng-if="parent.lapsi">
             <td ng-click="addLaskentakaavaviite(parent, funktioSlotIndex); showNewFunktioList.visible = false"><span>{{ t('laskentakaavapuu.viittaus') || 'Viittaus toiseen kaavaan' }}</span>
             </td>
