--- a/src/main/resources/webapp/app/valintatapajono/valintatapajono.html
+++ b/src/main/resources/webapp/app/valintatapajono/valintatapajono.html
@@ -212,6 +212,26 @@
     </div>
 </div>
 
+<div class="form-group">
+    <label class="control-label col-md-2">{{ t('valintatapajono.eiLasketaPaivamaaranJalkeen') || 'Ei lasketa päivämäärän jälkeen' }}</label>
+
+    <div class="col-md-4">
+        <p class="input-group">
+            <input class="form-control" datepicker-popup="dd.MM.yyyy"
+                   ng-model="model.valintatapajono.eiLasketaPaivamaaranJalkeen"
+                   is-open="eiLasketaPaivamaaranJalkeenOpen"
+                   close-text="Sulje"
+                   clear-text="Tyhjennä"
+                   current-text="Tänään"
+            />
+            <span class="input-group-btn">
+                        <a class="btn btn-default btn-sm" ng-click="openEiLasketaPaivamaaranJalkeen($event)"><i
+                                class="glyphicon glyphicon-calendar"></i></a>
+                    </span>
+        </p>
+    </div>
+</div>
+
 <div>
     <fieldset>
         <legend>{{ t('valintatapajono.varasijakasittelysaannot') || 'Varasijakäsittelysäännöt' }}</legend>
