VTKU-102 : Korjaa avain

--- a/src/main/resources/webapp/app/laskentakaavat/laskentakaavaeditori/puu/laskentakaavapuu.html
+++ b/src/main/resources/webapp/app/laskentakaavat/laskentakaavaeditori/puu/laskentakaavapuu.html
@@ -590,7 +590,7 @@ YHTASUURI
             </tr>
             <tr>
                 <td ng-click="addFunktio(parent, 'HAEAMMATILLISENTUTKINNONKESKIARVO', funktioSlotIndex); showNewFunktioList.visible = false">
-                    <span>{{ t('laskentakaavapuu.haeammatillisentutkinnon keskiarvo') || 'Hae ammatillisen tutkinnon tallennettu keskiarvo' }}</span></td>
+                    <span>{{ t('laskentakaavapuu.haeammatillisentutkinnon_keskiarvo') || 'Hae ammatillisen tutkinnon tallennettu keskiarvo' }}</span></td>
                 <td ng-click="addFunktio(parent, 'HAEAMMATILLISENOSANLAAJUUS', funktioSlotIndex); showNewFunktioList.visible = false">
                     <span>{{ t('laskentakaavapuu.haeammatillisentutkinnonosanlaajuus') || 'Hae ammatillisen tutkinnon osan laajuus' }}</span></td>
             </tr>
