VTKU-103 : Lisää YTO-osa-aluefunktiot

--- a/src/main/resources/webapp/app/laskentakaavat/laskentakaavaeditori/puu/laskentakaavapuu.html
+++ b/src/main/resources/webapp/app/laskentakaavat/laskentakaavaeditori/puu/laskentakaavapuu.html
@@ -597,6 +597,16 @@ YHTASUURI
                 <td ng-click="addFunktio(parent, 'HAEAMMATILLISENOSANLAAJUUS', funktioSlotIndex); showNewFunktioList.visible = false">
                     <span>{{ t('laskentakaavapuu.haeammatillisentutkinnonosanlaajuus') || 'Hae ammatillisen tutkinnon osan laajuus' }}</span></td>
             </tr>
+            <tr>
+                <td ng-click="addFunktio(parent, 'ITEROIAMMATILLISETYTOOSAALUEET', funktioSlotIndex); showNewFunktioList.visible = false">
+                    <span>{{ t('laskentakaavapuu.iteroiammatillisetytoosaalueet') || 'Iteroi ammatillisen tutkinnon YTOn osa-alueet' }}</span></td>
+                <td ng-click="addFunktio(parent, 'HAEAMMATILLISENYTOOSAALUEENLAAJUUS', funktioSlotIndex); showNewFunktioList.visible = false">
+                    <span>{{ t('laskentakaavapuu.haeammatillisenytonosaalueenlaajuus') || 'Hae ammatillisen tutkinnon YTON osa-alueen laajuus' }}</span></td>
+            </tr>
+            <tr>
+                <td ng-click="addFunktio(parent, 'HAEAMMATILLISENYTOOSAALUEENARVOSANA', funktioSlotIndex); showNewFunktioList.visible = false">
+                    <span>{{ t('laskentakaavapuu.haeammatillisenytonosaalueenarvosana') || 'Hae ammatillisen tutkinnon YTON osa-alueen arvosana' }}</span></td>
+            </tr>
             </tbody>
         </table>
 
