--- a/src/main/resources/webapp/app/valintatapajono/valintatapajono.html
+++ b/src/main/resources/webapp/app/valintatapajono/valintatapajono.html
@@ -218,19 +218,26 @@
     <div class="col-md-4">
         <p class="input-group">
             <input class="form-control" datepicker-popup="dd.MM.yyyy"
+                   auth ng-disabled="nykyinenArvoOnMenneisyydessa() && !userAccess.crudOph"
                    ng-model="model.valintatapajono.eiLasketaPaivamaaranJalkeen"
                    is-open="eiLasketaPaivamaaranJalkeenOpen"
                    close-text="Sulje"
                    clear-text="Tyhjennä"
                    current-text="Tänään"
             />
-            <span class="input-group-btn"
-                  auth ng-disabled="nykyinenArvoOnMenneisyydessa() && !userAccess.crudOph">
-                        <a class="btn btn-default btn-sm" ng-click="openEiLasketaPaivamaaranJalkeen($event)"
-                           auth ng-disabled="nykyinenArvoOnMenneisyydessa() && !userAccess.crudOph"><i
-                                class="glyphicon glyphicon-calendar"></i></a>
-                    </span>
+            <span class="input-group-btn">
+                <a class="btn btn-default btn-sm" ng-click="openEiLasketaPaivamaaranJalkeen($event)"
+                   auth ng-disabled="nykyinenArvoOnMenneisyydessa() && !userAccess.crudOph"><i
+                        class="glyphicon glyphicon-calendar"></i></a>
+            </span>
+
         </p>
+    </div>
+    <div class="col-md-6">
+        <span class="help-block"
+              auth ng-if="nykyinenArvoOnMenneisyydessa() && !userAccess.crudOph">
+                {{ t('valintatapajono.nykyinenarvomenneisyydessa') || 'Nykyinen päivämäärä on menneisyydessä, joten sitä voi muokata ainoastaan rekisterinpitäjä.' }}
+            </span>
     </div>
 </div>
 
