Hae tarjontatietoja myös kouta-internal:sta

--- a/src/main/resources/webapp/app/hakukohde/hakukohdelomake.html
+++ b/src/main/resources/webapp/app/hakukohde/hakukohdelomake.html
@@ -64,7 +64,7 @@
     <label class="col-md-2 control-label">{{ t('hakukohdelomake.hauntunniste') || 'Haun Tunniste (oid)' }}:</label>
 
     <div class="form-control-static col-md-10">
-        {{model.haku.nimi.kieli_fi}} ({{model.haku.oid}})
+        {{model.haku.uiNimi}} ({{model.haku.oid}})
     </div>
 </div>
 
