--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -1,7 +1,10 @@
-<HTML>
-<HEAD>
-    <META HTTP-EQUIV="refresh" CONTENT="0;URL=app/index.html">
-</HEAD>
-<BODY>
-</BODY>
-</HTML>
+<!DOCTYPE html>
+<html lang="fi">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Valintaperusteiden mallinnus</title>
+    <meta http-equiv="refresh" content="0;URL=app/index.html">
+</head>
+<body>
+</body>
+</html>
